syntax = "proto3";
option go_package = "github.com/zbw0046/vol-demo/grpc";

service backend {
  rpc WatchUpload(WatchUploadRequest) returns (stream WatchUploadResponse){};
  rpc GetVidInfo(GetVidInfoRequest) returns (GetVidInfoResponse){};
}

message WatchUploadRequest {
  string vid = 1;
}

message WatchUploadResponse {
  string message = 1;
}

message GetVidInfoRequest {
  string vid = 1;
}

message GetVidInfoResponse {
  string message = 1;
}
